# KRHI

./: .gitignore  .gitmodules  BuildDoxygen.bat  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-windows-linux.yml  doxygen.yml
Code/: mainpage.dox
Code/Include/Common/: APIInterface.hpp  Device.hpp  Instance.hpp  Layers.hpp  Surface.hpp  Window.hpp
Code/Include/Utils/: Export.hpp  Macros.hpp  Memory.hpp
Code/Source/Common/: APIInterface.cpp
Doc/: BuildDoxygen.bat  Doxyfile  doxygen.config
Libs/: CMakeLists.txt
Source/: main.cpp
Test/Renderer/: CMakeLists.txt  GLWindow.cpp  GLWindow.hpp  Main.cpp
